css: fix navbar collapse border becoming white only when the sliding menu is finished opening

--- a/www/assets/sass/main.scss
+++ b/www/assets/sass/main.scss
@@ -46,7 +46,7 @@
     font-size: 1.25em;
   }
 
-  .navbar-collapse.in {
+  .navbar-collapse.in, .navbar-collapse.collapsing {
     border-top-color: $cloud;
   }
 
